2006-09-27  Quentin Mathe <qmathe@club-internet.fr>
    
    * GNUmakefile: Updated to include etoile.make. Just does nothing for now
    since project name EtoileExtensionsKit doesn't match library name 
    EtoileExtensions.

2006-08-18  Guenther Noack <guenther@unix-ag.uni-kl.de>

    * Source/UKNibOwner.m:
    Made UKNibOwner load the bundle from the concrete classes bundle.
	Added -bundle and -loadNib methods.
	Converted documentation to doxygen format.

2006-06-05  Quentin Mathe <qmathe@club-internet.fr>
    
    * Headers/UKPluginsRegistry.h:
    * Source/UKPluginsRegistry.m:
    Imported from PreferencesKit. Probably going to remove them in this
    framework.
    * Source/GNUmakefile:
    Updated.

2006-02-16 Yen-Ju Chen <yjchen at gmail>

    * Source/GNUmakefile:
    Make it compile on mac.

2006-02-08  Quentin Mathe <qmathe@club-internet.fr>
    
    * Source/GNUmakefile:
    * Source/GNUmakefile.postamble: Added to remove the warning "Cocoa/Cocoa.h:
    No such file or directory" at install phase (reported by Chris B. Vetter).

2006-02-08  Quentin Mathe <qmathe@club-internet.fr>
    
    * Source/UKDistributedView.m:
    * Source/UKFinderIconCell.m:
    Added 'math.h' include directive (reported by Chris B. Vetter).
     * Source/GNUmakefile: Linked 'libm' to fix compilation on FreeBSD 

2006-02-08  Quentin Mathe <qmathe@club-internet.fr>
    
    * Source/UKQueue.m: Taken in account kqueue Darwinism to fix compilation
    on FreeBSD (patch by Chris B. Vetter).

2006-01-21  Quentin Mathe <qmathe@club-internet.fr>
    
    * Source/UKQueue.m: Updated to disable @synchronized use with GNUstep when
    kqueue is available (like on FreeBSD). 
    NOTE: @synchronized isn't supported at this time with GNU runtime.
    * Source/GNUmakefile: Modified to compile UKMainThreadProxy (not only
    installing the related header).

2006-01-19  Quentin Mathe <qmathe@club-internet.fr>
    
    * COPYING: Added.
    * GNUmakefile:
    * Source/GNUmakefile: 